Mostly to remove left column of "minimal" theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
+title: User Interfaces for Building Knowledge 2019
+description: An ACM IUI 2019 Workshop
