To fit better on page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: User Interfaces for Building Knowledge 2019
+title: User Interfaces for Building Knowledge
 description: An ACM IUI 2019 Workshop
